# LolAC

./: .gitignore  AGENT_INSTRUCTIONS.md  CLAUDE.md  README.md  auto-accept.js  package.json
lolac-tauri/: index.html  package-lock.json  package.json
lolac-tauri/src/: App.css  App.tsx
lolac-tauri/src-tauri/: Cargo.toml  tauri.conf.json
lolac-tauri/src-tauri/src/: champ_select.rs  lcu.rs  main.rs
